--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,19 @@
 body{
     font-family: "Arial";
     text-align: center;
-    
-    
+    font-size: 16px;
+    color: #333;
+    padding: 0;
+    margin: 0;
+}
+#container {
+    width: 70%;
+padding: 1em;
+text-align: left;
+border: 1px solid #ddd;
+margin: 0 auto;
+}
+
+#container h1{
+    font-size: 20px;
 }
