--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,7 +2,7 @@ body{
     font-family: "Arial";
     text-align: center;
     font-size: 16px;
-    color: #333;
+    color: red;
     padding: 0;
     margin: 0;
 }
