--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,4 +1,5 @@
 body{
+    background: #1e1f24;
     font-family: "Arial";
     text-align: center;
     font-size: 16px;
@@ -16,6 +17,10 @@ body{
     margin: 0;
     padding: 0.5em;
 }
+#cabecera #logo{
+    width: 20px;
+    vertical-align: middle;
+}
 #cabecera #tagline {
     margin:0 0 0 1em;
     font-weight: normal;
@@ -31,4 +36,8 @@ margin: 0 auto;
 
 #container h1{
     font-size: 20px;
+}
+#post {
+    background: white;
+    padding: 1em;
 }
